@@ -18,7 +18,8 @@ else.  With this, include the file(s) that you changed.
 Changes for CVS:
 
 plugin/plugin_python.c, plugin/include/plugin_python.h: Add missing attack type
-   wrapper functions.
+   wrapper functions, function CFPython.SetDamned(), wrapper functions for
+   missing cost flags, and wrapper functions for event types.
 plugin/plugin_python.c: Add an optional parameter to CFPython.SetName() to
    specify name_pl as well. Always set name_pl.
 plugin/plugin_python.c: Fix a buffer overflow in CFPython.RegisterCommand():
